AR-19: Updating healthcheck endpoint
